<resources>
    <string name="app_name">Cavea App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_films">ფილმები</string>
    <string name="menu_tickets">ბილეთები</string>
    <string name="menu_bar">ბარი</string>
    <string name="menu_login">შესვლა</string>
    <string name="menu_settings">პარამეტრები</string>
</resources>
